--- a/FE/frontend/multikart-ssr/src/index.html
+++ b/FE/frontend/multikart-ssr/src/index.html
@@ -9,9 +9,12 @@
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<!--Google font-->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body class="ltr">
+<body class="ltr mat-typography">
     <app-root></app-root>
     <script src="https://checkout.stripe.com/checkout.js"></script>
     <!-- facebook chat section start -->
